feat: reqork taskfiles

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,11 +1,11 @@
 ---
-version: '3'
+version: "3"
 
 vars:
   PROJECT_DIR:
     sh: "git rev-parse --show-toplevel"
   CLUSTER_DIR: "{{.PROJECT_DIR}}/cluster"
-  ANSIBLE_DIR: "{{.PROJECT_DIR}}/server/ansible"
+  ANSIBLE_DIR: "{{.PROJECT_DIR}}/ansible"
 
 env:
   KUBECONFIG: "{{.PROJECT_DIR}}/kubeconfig"
@@ -15,3 +15,6 @@ includes:
   blocky: .taskfiles/blocky.yml
   cluster: .taskfiles/cluster.yml
   flux: .taskfiles/flux.yml
+  format: .taskfiles/format.yml
+  lint: .taskfiles/lint.yml
+  pre-commit: .taskfiles/pre-commit.yml
