--- a/.taskfiles/ansible.yml
+++ b/.taskfiles/ansible.yml
@@ -2,94 +2,86 @@
 version: "3"
 
 env:
-  ANSIBLE_CONFIG: "{{.PROJECT_DIR}}/server/ansible/ansible.cfg"
+  ANSIBLE_CONFIG: "{{.PROJECT_DIR}}/ansible/ansible.cfg"
 
 vars:
   ANSIBLE_PLAYBOOK_DIR: "{{.ANSIBLE_DIR}}/playbooks"
   ANSIBLE_INVENTORY_DIR: "{{.ANSIBLE_DIR}}/inventory"
-  ANSIBLE_MASTER_GROUP: "master-nodes"
-  ANSIBLE_WORKER_GROUP: "worker-nodes"
 
 tasks:
-  list:
-    desc: List all the k8s nodes
+  deps:
+    desc: Upgrade Ansible galaxy deps
+    dir: ansible
     cmds:
-      - "ansible {{.ANSIBLE_MASTER_GROUP}}:{{.ANSIBLE_WORKER_GROUP}} -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password --list-hosts"
+      - "ansible-galaxy install -r requirements.yaml --force"
+      - "pip3 install -r requirements.txt"
+    silent: true
+
+  list:
+    desc: List all the hosts
+    dir: ansible
+    cmds:
+      - "ansible all -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --list-hosts"
     silent: true
 
   ping:
-    desc: Ping all the k8s nodes
+    desc: Ping all the hosts
+    dir: ansible
     cmds:
-      - "ansible {{.ANSIBLE_MASTER_GROUP}}:{{.ANSIBLE_WORKER_GROUP}} -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password --one-line -m 'ping'"
+      - "ansible all -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --one-line -m 'ping'"
     silent: true
 
   uptime:
-    desc: Uptime of all the k8s nodes
+    desc: Uptime of all the hosts
+    dir: ansible
     cmds:
-      - "ansible {{.ANSIBLE_MASTER_GROUP}}:{{.ANSIBLE_WORKER_GROUP}} -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password --one-line -a 'uptime -p'"
+      - ansible all -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --one-line -a 'uptime'
     silent: true
 
   clean-images:
     desc: Clean up stale container images
+    dir: ansible
     cmds:
-      - "ansible {{.ANSIBLE_MASTER_GROUP}}:{{.ANSIBLE_WORKER_GROUP}} -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password --one-line -a 'k3s crictl rmi --prune' --become"
+      - "ansible kubernetes -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --one-line -a 'k3s crictl rmi --prune' --become"
     silent: true
 
   purge-manifests:
     desc: Delete all manifests under /var/lib/rancher/k3s/server/manifests
+    dir: ansible
     cmds:
-      - "ansible {{.ANSIBLE_MASTER_GROUP}} -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --one-line --vault-password-file .vault-password -a 'rm /var/lib/rancher/k3s/server/manifests/*' --become"
+      - "ansible master -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --one-line -a 'rm /var/lib/rancher/k3s/server/manifests/*' --become"
+
+  reboot:
+    desc: Reboot all the k8s nodes
+    dir: ansible
+    cmds:
+      - "ansible kubernetes -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml -a '/usr/bin/systemctl reboot' --become"
+    silent: true
+
+  poweroff:
+    desc: Shutdown all the k8s nodes
+    dir: ansible
+    cmds:
+      - "ansible kubernetes -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml -a '/usr/bin/systemctl poweroff' --become"
+    silent: true
 
   playbook:ubuntu-prepare:
     desc: Prepare all the k8s nodes for running k3s
+    dir: ansible
     cmds:
-      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password {{.ANSIBLE_PLAYBOOK_DIR}}/ubuntu/prepare.yaml"
+      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/kubernetes/ubuntu-prepare.yaml"
     silent: true
 
   playbook:ubuntu-upgrade:
     desc: Upgrade all the k8s nodes operating system
+    dir: ansible
     cmds:
-      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password {{.ANSIBLE_PLAYBOOK_DIR}}/ubuntu/upgrade.yaml"
+      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/kubernetes/ubuntu-upgrade.yaml"
     silent: true
 
-  playbook:ubuntu-reboot:
-    desc: Reboot all the k8s nodes
+  playbook:cluster-install:
+    desc: Install Kubernetes on the nodes
+    dir: ansible
     cmds:
-      - "ansible {{.ANSIBLE_MASTER_GROUP}}:{{.ANSIBLE_WORKER_GROUP}} -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password -m reboot"
-    silent: true
-
-  playbook:k3s-install:
-    desc: Install k3s on the nodes
-    cmds:
-      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password {{.ANSIBLE_PLAYBOOK_DIR}}/k3s/install.yaml"
-    silent: true
-
-  playbook:k3s-upgrade:
-    desc: Install k3s on the nodes
-    cmds:
-      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password {{.ANSIBLE_PLAYBOOK_DIR}}/k3s/upgrade.yaml "
-    silent: true
-
-  k3s-flux:
-    desc: Install flux on the nodes
-    cmds:
-      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password {{.ANSIBLE_PLAYBOOK_DIR}}/k3s/install_flux.yaml"
-    silent: true
-
-  encrypt:
-    desc: Encrypt Ansible Vault
-    cmds:
-      - "ansible-vault encrypt --vault-password-file .vault-password {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/group_vars/all/vault.yaml"
-    silent: true
-
-  decrypt:
-    desc: Decrypt Ansible Vault
-    cmds:
-      - "ansible-vault decrypt --vault-password-file .vault-password {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/group_vars/all/vault.yaml"
-    silent: true
-
-  nuke:
-    desc: Install flux on the nodes
-    cmds:
-      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml --vault-password-file .vault-password {{.ANSIBLE_PLAYBOOK_DIR}}/k3s/nuke.yaml"
+      - "ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/home-cluster/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/kubernetes/k3s-install.yaml"
     silent: true
