--- a/.sops.yaml
+++ b/.sops.yaml
@@ -1,8 +1,13 @@
 ---
 creation_rules:
-  - encrypted_regex: "((?i)(pass|secret($|[^N])|key|token|^data$|^stringData$))"
+  - path_regex: ansible/.*\.sops\.ya?ml
+    unencrypted_regex: "^(kind)$"
     pgp: >-
       B3BB654B6CAAA312F49C37DF9CEFDEA122154047
     gcp_kms: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
-
+  - path_regex: cluster/.*\.ya?ml
+    encrypted_regex: "^(data|stringData)$"
+    pgp: >-
+      B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    gcp_kms: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
 # sops -i -r --add-gcp-kms projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key /Users/cody/git/k8s-ops/old/namespaces/base/velero/velero/velero-secret.enc.yaml
