--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -32,5 +32,6 @@ jobs:
             mkdocs-macros-plugin >=0.5 \
             mkdocs-material >=1.0 \
             mkdocs-minify-plugin>=0.3 \
-            mkdocs-redirects>=1.0
+            mkdocs-redirects>=1.0 \
+            git-revision-date-localized>=0.10.0
       - run: mkdocs gh-deploy --config-file ./mkdocs.yaml --force
