--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -27,7 +27,7 @@ jobs:
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - run: |
-          pip install \
+          pip3 install \
             mkdocs>=1.1 \
             mkdocs-macros-plugin >=0.5 \
             mkdocs-material >=1.0 \
