--- a/ansible/inventory/home-cluster/group_vars/kubernetes/k3s.yaml
+++ b/ansible/inventory/home-cluster/group_vars/kubernetes/k3s.yaml
@@ -20,11 +20,14 @@ k3s_debug: false
 # Enabled embedded etcd
 k3s_etcd_datastore: true
 
+# Enable for single or even number of masters
+k3s_use_unsupported_config: false
+
 # Control Plane registration address
 # this is set to my haproxy address running on my router.
 # If you want to use kube-vip only
 # set this to "{{ kubevip_address }}"
-k3s_registration_address: 192.168.69.5
+k3s_registration_address: "{{ kubevip_address }}"
 
 #
 # /etc/rancher/k3s/config.yaml.d
@@ -48,7 +51,6 @@ k3s_server_config_yaml_d_files:
 # k3s_server_manifests_urls:
 #   - url: https://docs.projectcalico.org/archive/v3.20/manifests/tigera-operator.yaml
 #     filename: tigera-operator.yaml
-
 #
 # /var/lib/rancher/k3s/agent/pod-manifests
 #
