fix: k8s yaml frontmatter

--- a/cluster/core/rook-ceph/storage/secret.sops.yaml
+++ b/cluster/core/rook-ceph/storage/secret.sops.yaml
@@ -1,5 +1,6 @@
 # yamllint disable
 apiVersion: v1
+kind: Secret
 data:
     admin-secret: ENC[AES256_GCM,data:nd0cW7co4nA88WnCeTc0XsdVvPqU92+pM9H1wOA7WqndFhvMzL+law==,iv:a/k+dnVZH+eZa5OlYsRP7efiV8S7JdVAQMmc/Gy0Ae8=,tag:vNohLHEsyVGSS5SgyeDudg==,type:str]
     cluster-name: ENC[AES256_GCM,data:fBcihA==,iv:pGRxCiligyPKfG7M84Tvl2s1UYuDVOk2GAtt6ZnM/3I=,tag:LmwRTQrkn92Fo4j3puRvtQ==,type:str]
@@ -14,8 +15,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-16T14:11:28Z"
-    mac: ENC[AES256_GCM,data:1GrV1fFS/Pzjfv80gXnQfaHxSUcBx0Fe+PH8iViMgDLLM1IPSKQKOhBGSy+Pb1F+G6edFZRktGlj0SgiQkzv61i5KcRSdn6ERf1hXxEnd4CCfMzyA3+RyAk/gGMj3YTnIbN6+o7c077hT+zF0BJ3BIymdxzOtPkLsHG+qlyBRTU=,iv:9EUtpJmyapZKuwXqpBrC78IGkLlT6yfie6REejgCxlY=,tag:BIwYQ8QgzXmlhpcQxs/17g==,type:str]
+    lastmodified: "2021-09-16T14:27:23Z"
+    mac: ENC[AES256_GCM,data:DDvAVeFiUY0uoDE7PL9q+A+5lVxWF/or9gwFeCdkb6C5lXXnLkVjSI3gaMZd4o8AuuStPItTEJqIn8U/Ue1cOhIfAZFL8wD2QuN1PAZpsksFELmKCnGBjsevrN7BtleyDU0S1dmAFqqajzC9redyZ70/UMGUhoydpkXnjP7QkdI=,iv:lcOGsRuNaI4LcGrdhYo5chP5nd8vugjnuQpgs8hrt80=,tag:1hAgxpHVYKPyvjHm3O8krg==,type:str]
     pgp:
         - created_at: "2021-09-16T14:11:27Z"
           enc: |
