--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -1,10 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - common.yaml
   - helm-release.yaml
-  - storage
-  - rook-direct-mount
-  - service-monitors
-  - snapshot-controller
-  - dashboard
+  # - storage
+  # - rook-direct-mount
+  # - service-monitors
+  # - snapshot-controller
+  # - dashboard
