--- a/cluster/core/rook-ceph/storage/ceph-block-pool.yaml
+++ b/cluster/core/rook-ceph/storage/ceph-block-pool.yaml
@@ -2,7 +2,7 @@
 apiVersion: ceph.rook.io/v1
 kind: CephBlockPool
 metadata:
-  name: ceph-block-pool
+  name: replicapool
   namespace: rook-ceph
 spec:
   failureDomain: host
