feat: add service monitors

--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - secret.sops.yaml
   - storage
   # - rook-direct-mount
-  # - service-monitors
+  - service-monitors
   - snapshot-controller
   # - dashboard
