feat: add rook-direct-mount

--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - helm-release.yaml
   - secret.sops.yaml
   - storage
-  # - rook-direct-mount
+  - rook-direct-mount
   - service-monitors
   - snapshot-controller
   # - dashboard
