--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,7 +8,7 @@ stringData:
     SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:09dpD8M0ZaYXp8qgcZzwWDaJnBeCzzagCC8zAcRWDMniG0cn,iv:DxnWMR7MJxT2Bq4upWXj4wizho+9deCw5jMky/emh1Q=,tag:KA206Y9qOWRr50gI/jBggQ==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:ov5Boartv8urVY+r2A==,iv:+LhuthZ9489dsXTzT5V0/Zxk22FdBzY+Bsnx4dAI9wM=,tag:V6ntCx9z7kSEqSILnx4CXg==,type:str]
     SECRET_HOME_DOMAIN: ENC[AES256_GCM,data:xyQkPoXBUag=,iv:UNbTWu7jZ5+aYcX328wYz3f0/o9khdNzUQOETeg7Qsg=,tag:0X93yRjciK6Zb+wCjxqloA==,type:str]
-    SECRET_NAS_ADDR: ENC[AES256_GCM,data:ZTkLSwlnQB2E,iv:1lCLFZIAUP6Pa98j4iJ/pHjGDNSg6FLWukGg+nt1ka8=,tag:EgLdPE8fG7THuI2cAT8dfw==,type:str]
+    SECRET_B2_S3_URL: ENC[AES256_GCM,data:bkkG1PVyor4BCDG1h4somdSCrPXLzOskRhOPYRLF,iv:Lb+TxEfnbmXjwkX3+/GvY/NJqYo561nFPkM/QkFqpX0=,tag:kQUitPz6T1euK5IKVdgwVA==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:aGYCoJWfEtNu5nS00BhKoFQ2/3bszatoVw==,iv:RZj2Zm3wuLFWUSDx7QAWLFVQczLCwP64PEH6doTPZcM=,tag:vZpLecqAnHUc4fSOLEqt/g==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:b9elSWu7RsXnTa7vdBLCLl9cKdiC6dCnvkNHs6rSWIxuMYBh,iv:qOwXjnmItcHRisllkA0WSwWh+6mpBi9/VcfRVKgfWxM=,tag:N64gw6iZT/WRUYwz0YEYkg==,type:str]
     SECRET_KURED_DISCORD_WEBHOOK: ENC[AES256_GCM,data:OPIdUqq0zgm5DDhLWSRIwjzqtPl6Uf2lFsjViMjcITv7IokL,iv:+RNmXikxmirRfSVVqcmr6HnDUIOBye+YOZ8T1YXdxRw=,tag:WJU9YT/XEnhTJF/ZjNCf/w==,type:str]
@@ -29,8 +29,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-16T17:38:53Z"
-    mac: ENC[AES256_GCM,data:vQ8Xl76YTi5cA/e//83JmmrwxfOd+EHfrj2TZzO+T6JdMWBI7O5gxbswYN3Pw50eZHJ5BVBkfi7z//1Y6M6oY1f6dlIOxB/61qKo3N3Rbvroa95P3fEq2yMQWZ4ZMLGFIbIbUqOGzhz6FxRhNq5CjYEY2Mpa0U6DqI2FJ4QvPko=,iv:nMMMyaesneTmzXdhvNvhcUflhva4nJmAbwFveMzzIqo=,tag:LCXpKIp7QrQGGXwqtsWHNg==,type:str]
+    lastmodified: "2021-09-16T18:37:48Z"
+    mac: ENC[AES256_GCM,data:Df08/PNPTSj9gNyOWT1msKaT9G4jR0PXRV/ROmc8jrWKzydxptRX6X2Q1kxTH9szu5vfJOjXC7BG6GwlbYqWErVAs/im/+h6qqco16bXFvgMaVYHnU92RkV4HgUAPuCvfamm37faledpHwxD8Y9n0A5mm+19h4P1ZldcNQweuLQ=,iv:648didghBo1Audca7o+ZBRvRs+Hj+dfxH6+Wv46/doI=,tag:TLr3MGlHzkWcfgy/Tr9BLg==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
