fix: update to b2 cloud

--- a/cluster/apps/velero/secret.sops.yaml
+++ b/cluster/apps/velero/secret.sops.yaml
@@ -5,8 +5,8 @@ type: Opaque
 metadata:
     name: velero-s3-creds
     namespace: velero
-stringData:
-    cloud: ENC[AES256_GCM,data:fwkumkXnoE5HXt6wnxF+OpEGCusP+zTyumC6N1WECjCd1QfuekzbyCtw9PSYmy7jKsuIghiQzgcf4K0J9LctZLnmAartG4k5FYnJ6ufChPniabzImXS2shf01R+ZOPxU0MFgrstRq03h68w=,iv:DtQV0J0c+kDHuDGFPFfPKz7Q4VKuqXL68TfFBDWfIqY=,tag:l6AuC98z4ZkNcL+jyHXlvg==,type:str]
+data:
+    cloud: ENC[AES256_GCM,data:qV0V9Pwgq3fnzVP+/SLgSdnse8Wv1xLSzl0PiN+fJiOxCvfPSP09hSDYqS9b20IS2wmSSzQZIHTYsE/9BLo37ZBxojNEGq4tjy7v1t3OVRzDHuui4XkfLii0X5P3wJ/Jy/gziE52ZEitCs0uLiYSNxfI29fKH1SwvbcafGTGLZBHi28d/xGase0NZSDY1vT5,iv:a4zeLMminKjQJCybM1atP2+m2kqTah3tYGbjUmmejPA=,tag:T/ZUXfJWQu3QdK5DvTgbhQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -16,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-16T18:31:36Z"
-    mac: ENC[AES256_GCM,data:Y8GkbsT4btk6GFUYG5BTtvec6rTu+kATham1phYDn10ksb0akpEwBnU7PyGQwrwgK29/9HAd6XrEfoVa7VxcVb371Z6Nj1Egxp8uFc49ZvqkWBMKAE6a1XWrbO3AyO0bOkmIl1i6yd+Sbf/ig3riJY3Chql9m3yEoawgKqKn0M0=,iv:3RasUE4BveAvjbVDLcMK8TfmejF0rXgPJ3JpA+u7bQY=,tag:730yt38e0/97D/niepm6eA==,type:str]
+    lastmodified: "2021-09-16T18:59:30Z"
+    mac: ENC[AES256_GCM,data:SMbKQ5FZe7RBF+BUs68ZCF9lt4aHogK0F/Zztj0Gi12rZFipw9p/33fLfvsHjjpVp7m+UgQ4W+wPqgzkAyID3QLXYA4G/t9BGpAeqM5553LsdRzDyIzyD5ybRd8NpDhXk0cic5ZTUQEuHtj6e2aV9B2t4kd4zJVceuIkUf/OD20=,iv:wygJdi0b75LCWv83hgSop/RGLzjdNe/+n6UqRLPBFgg=,tag:J0EUPsF/oyajUFCmFdVagQ==,type:str]
     pgp:
         - created_at: "2021-09-16T17:44:21Z"
           enc: |
