--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -9,6 +9,7 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:ov5Boartv8urVY+r2A==,iv:+LhuthZ9489dsXTzT5V0/Zxk22FdBzY+Bsnx4dAI9wM=,tag:V6ntCx9z7kSEqSILnx4CXg==,type:str]
     SECRET_HOME_DOMAIN: ENC[AES256_GCM,data:xyQkPoXBUag=,iv:UNbTWu7jZ5+aYcX328wYz3f0/o9khdNzUQOETeg7Qsg=,tag:0X93yRjciK6Zb+wCjxqloA==,type:str]
     SECRET_B2_S3_URL: ENC[AES256_GCM,data:bkkG1PVyor4BCDG1h4somdSCrPXLzOskRhOPYRLF,iv:Lb+TxEfnbmXjwkX3+/GvY/NJqYo561nFPkM/QkFqpX0=,tag:kQUitPz6T1euK5IKVdgwVA==,type:str]
+    SECRET_B2_BUCKET: ENC[AES256_GCM,data:ov8Snp3OuD0e/w==,iv:e2Ff7LMOlz5AUv5SoGnTjYVEv5GUhkMPH1Byd8JuXeo=,tag:iOSs5SJE8ZBbiGLm4EXrlQ==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:aGYCoJWfEtNu5nS00BhKoFQ2/3bszatoVw==,iv:RZj2Zm3wuLFWUSDx7QAWLFVQczLCwP64PEH6doTPZcM=,tag:vZpLecqAnHUc4fSOLEqt/g==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:b9elSWu7RsXnTa7vdBLCLl9cKdiC6dCnvkNHs6rSWIxuMYBh,iv:qOwXjnmItcHRisllkA0WSwWh+6mpBi9/VcfRVKgfWxM=,tag:N64gw6iZT/WRUYwz0YEYkg==,type:str]
     SECRET_KURED_DISCORD_WEBHOOK: ENC[AES256_GCM,data:OPIdUqq0zgm5DDhLWSRIwjzqtPl6Uf2lFsjViMjcITv7IokL,iv:+RNmXikxmirRfSVVqcmr6HnDUIOBye+YOZ8T1YXdxRw=,tag:WJU9YT/XEnhTJF/ZjNCf/w==,type:str]
@@ -29,8 +30,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-16T18:37:48Z"
-    mac: ENC[AES256_GCM,data:Df08/PNPTSj9gNyOWT1msKaT9G4jR0PXRV/ROmc8jrWKzydxptRX6X2Q1kxTH9szu5vfJOjXC7BG6GwlbYqWErVAs/im/+h6qqco16bXFvgMaVYHnU92RkV4HgUAPuCvfamm37faledpHwxD8Y9n0A5mm+19h4P1ZldcNQweuLQ=,iv:648didghBo1Audca7o+ZBRvRs+Hj+dfxH6+Wv46/doI=,tag:TLr3MGlHzkWcfgy/Tr9BLg==,type:str]
+    lastmodified: "2021-09-16T19:07:36Z"
+    mac: ENC[AES256_GCM,data:bBdKg+o007w5gbKpJ5fkgUOfq19E/owmxRBch3g2vx9DsNlvBDTxlnnsOkNGp1xtAqL2kOm2feH4TVwdqHyVFvyDXgZ3PEW/FajPmKDkjOCLZKvKFvkRoD00QL4/d33PZ0qCy9IDU0u3GQHmrIuGKTgOvnLkpp/HYt1VSrYTRbk=,iv:dGP0MPn63oxp9t7BzJ8oEhGxga6oApPWEVnBmEvUKac=,tag:6fCQqCgaSQt5ajvPAc3vHw==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
