fix: update to b2 cloud

--- a/cluster/apps/velero/helm-release.yaml
+++ b/cluster/apps/velero/helm-release.yaml
@@ -29,7 +29,8 @@ spec:
         config:
           s3Url: https://s3.us-west-001.backblazeb2.com
           publicUrl: https://s3.us-west-001.backblazeb2.com
-          signatureVersion: "4"
+          region: us-west-001
+          s3ForcePathStyle: "true"
       volumeSnapshotLocation:
         name: aws
         config:
