--- a/cluster/apps/velero/helm-release.yaml
+++ b/cluster/apps/velero/helm-release.yaml
@@ -25,16 +25,16 @@ spec:
       provider: aws
       backupStorageLocation:
         name: default
-        bucket: ${SECRET_B2_BUCKET}
+        bucket: velero-dc2
         config:
-          s3Url: https://s3.us-west-001.backblazeb2.com
+          region: us-east-1
+          s3ForcePathStyle: true
+          s3Url: https://s3.us-west-001.backblazeb2.com:443
           publicUrl: https://s3.us-west-001.backblazeb2.com
-          region: us-west-001
-          s3ForcePathStyle: "true"
       volumeSnapshotLocation:
         name: aws
         config:
-          region: us-west-001
+          region: us-east-1
       resticTimeout: 6h
     initContainers:
       - name: velero-plugin-for-aws
