--- a/cluster/apps/velero/helm-release.yaml
+++ b/cluster/apps/velero/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
           region: us-west-001
           s3ForcePathStyle: true
           s3Url: https://s3.us-west-001.backblazeb2.com:443
-          publicUrl: https://s3.us-west-001.backblazeb2.com
+          # publicUrl: https://s3.us-west-001.backblazeb2.com
       volumeSnapshotLocation:
         name: aws
         config:
