debug: velero b2 troubleshooting

--- a/cluster/apps/velero/secret.sops.yaml
+++ b/cluster/apps/velero/secret.sops.yaml
@@ -5,8 +5,8 @@ type: Opaque
 metadata:
     name: velero-s3-creds
     namespace: velero
-data:
-    cloud: ENC[AES256_GCM,data:qV0V9Pwgq3fnzVP+/SLgSdnse8Wv1xLSzl0PiN+fJiOxCvfPSP09hSDYqS9b20IS2wmSSzQZIHTYsE/9BLo37ZBxojNEGq4tjy7v1t3OVRzDHuui4XkfLii0X5P3wJ/Jy/gziE52ZEitCs0uLiYSNxfI29fKH1SwvbcafGTGLZBHi28d/xGase0NZSDY1vT5,iv:a4zeLMminKjQJCybM1atP2+m2kqTah3tYGbjUmmejPA=,tag:T/ZUXfJWQu3QdK5DvTgbhQ==,type:str]
+stringData:
+    cloud: ENC[AES256_GCM,data:39x/cyE8TCD6ofCtqHti6v4/f2LzpGYCcCzcQBn1fX0lq6Joh7g8+lIplaueoF8twMIWV8cFXpqYaThLAUZez/XT1JO2oXy+SiV/mlm9sG443GaKj9G/KSWibHUh0EUsqNoWz6G1bB+fuKTQ,iv:jeBUI7wxXUsAbVWAKjPpihpI+Ct4Xq85PSOmdVcp01s=,tag:onv6PTe/uum/ya4MkgN9Tg==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -16,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-16T18:59:30Z"
-    mac: ENC[AES256_GCM,data:SMbKQ5FZe7RBF+BUs68ZCF9lt4aHogK0F/Zztj0Gi12rZFipw9p/33fLfvsHjjpVp7m+UgQ4W+wPqgzkAyID3QLXYA4G/t9BGpAeqM5553LsdRzDyIzyD5ybRd8NpDhXk0cic5ZTUQEuHtj6e2aV9B2t4kd4zJVceuIkUf/OD20=,iv:wygJdi0b75LCWv83hgSop/RGLzjdNe/+n6UqRLPBFgg=,tag:J0EUPsF/oyajUFCmFdVagQ==,type:str]
+    lastmodified: "2021-09-16T21:49:53Z"
+    mac: ENC[AES256_GCM,data:rz5QqJET3ExBw3Bxhlm70jn9fnkEq1ywmly7OTNPjBeAfK7ACuOQiprTwyHHeZ1FaM/UKc1plLePeT2rrcSX/ywN4zSA/oVGfPkcN1MBoqNIiowh+zfBJthseWe60g9U1vZP0KRI5ptNXddkPl9bURyWtN4GzMnxprEXlFLYmxA=,iv:S6SwRdiEgx/h9nJAX1o2v855mYM6w7FbsLzDOTAh5WA=,tag:Lk1aPZ1F2tgqQ6miMwOIUg==,type:str]
     pgp:
         - created_at: "2021-09-16T17:44:21Z"
           enc: |
