--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   # - kube-system
   # - media
   # - monitoring
-  # - networking
+  - networking
   # - system-upgrade
   # - tools
   - velero
