fix: revert to old dns setup

--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -7,11 +7,12 @@ metadata:
 data:
   GATEWAY_ADDR: "10.1.6.1"
   #
-  KUBE_VIP_ADDR: "192.168.42.5"
+  KUBE_VIP_ADDR: "192.168.69.5"
   KUBE_VIP_IFACE: "ens18"
   KUBE_VIP_PEER_AS: "64512"
   KUBE_VIP_PEER_IP: "10.1.6.1"
   #
+  SVC_COREDNS_ADDRESS: "192.168.69.100"
   SVC_BLOCKY_ADDR: "192.168.69.102"
   SVC_EMQX_ADDR: "192.168.69.110"
   SVC_MOSQUITTO_ADDR: "192.168.69.110"
