--- a/cluster/apps/networking/kustomization.yaml
+++ b/cluster/apps/networking/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - blocky
+  - blocky
   - cloudflare-ddns
-  # - error-pages
+  - error-pages
   - external-dns
-  # - secret-reflector
+  - secret-reflector
   - traefik
-  # - wildcard-certificate
+  - wildcard-certificate
