--- a/ansible/inventory/home-cluster/host_vars/gateway.sops.yaml
+++ b/ansible/inventory/home-cluster/host_vars/gateway.sops.yaml
@@ -1,6 +1,6 @@
 kind: Secret
 ansible_become_pass: ENC[AES256_GCM,data:FBF6oKWkgy/h0gTOrQ==,iv:VCsm1zZh2Ln/DbRtgbpg3jqqgUarHr+4+JNJxE+eMtI=,tag:itaj0oh7/tnxkCpmh1ZWmQ==,type:str]
-domain: ENC[AES256_GCM,data:HdYNn6Juwg==,iv:tOrIB5CaeM7ydB293HzUpNmBc+FLXUINrWp7uCTNEPc=,tag:5t9QrMDrExs8LvVdBi/XKQ==,type:str]
+domain: ENC[AES256_GCM,data:9g/2MZqBW76lPRGN0A==,iv:1SYOWue9CC9oNtBw659fjwGxvEhEMkbF0Ec+g60aIQE=,tag:cXCrC/1QsPSTEDnTL+RuBQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -10,8 +10,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-15T14:03:38Z"
-    mac: ENC[AES256_GCM,data:WWcjzRe9VJU8WC0eV7C5u1E6sShYcwGPTu7XTavMN3X9SJLNmjg9cnf/xh97W/+AWKcouYh/FfMZFyDh/H8LnZFsKUb9d5v2K32AqIJjDqfNk0y1tzy0I3vwk5R6QOZcBR2OpdmVqYBwglKH5TXDdh+K9qR8JZhzPk8ULPZEfIU=,iv:kX0bLyOt8/Cy2NkI7bqG+jFcHkmnTq5ggA3xnONX0XQ=,tag:3R/byi2snBcyH/8EbOVYUg==,type:str]
+    lastmodified: "2021-09-19T21:35:52Z"
+    mac: ENC[AES256_GCM,data:VxudVH7C2PbJrWdgYNMXGL0krEdsFIMSs7WbwQQEq0Kk6N5UxaAzoCr0nL1aPNBx+3sGjIlxFJ9A+RkSrxCf+3pXKzq1rubLBCcyMoAiCvyOERrYDqeiw/wDUP0XeBvFiEEhgUcZ7lm3RJY5z4vJGaNMqvToIDkaJrX3p4MOeMM=,iv:xE06x1rB43bSgqe19OiVGxPtNCr3NSYQjRKyG1AcFxI=,tag:LaJgLDVkmOGs1SoPmO5dAQ==,type:str]
     pgp:
         - created_at: "2021-09-15T14:03:37Z"
           enc: |
