debug: rook-ceph error

--- a/cluster/core/rook-ceph/helm-release.yaml
+++ b/cluster/core/rook-ceph/helm-release.yaml
@@ -15,6 +15,7 @@ spec:
         kind: HelmRepository
         name: rook-ceph-charts
         namespace: flux-system
+  timeout: 30m
   values:
     crds:
       enabled: false
