--- a/cluster/core/rook-ceph/helm-release.yaml
+++ b/cluster/core/rook-ceph/helm-release.yaml
@@ -18,7 +18,7 @@ spec:
   timeout: 30m
   values:
     crds:
-      enabled: false
+      enabled: true
     csi:
       kubeletDirPath: /var/lib/kubelet
       pluginTolerations:
