--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - secret.sops.yaml
-  - storage
-  - rook-direct-mount
-  - service-monitors
-  - snapshot-controller
-  - dashboard
+  # - secret.sops.yaml
+  # - storage
+  # - rook-direct-mount
+  # - service-monitors
+  # - snapshot-controller
+  # - dashboard
