debug: rook troubleshooting

--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - secret.sops.yaml
-  # - storage
+  - storage
   # - rook-direct-mount
   # - service-monitors
   # - snapshot-controller
