--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cluster-external.yaml
-  - ceph-block-pool.yaml
-  - ceph-file-system.yaml
-  - ceph-object.yaml
-  - storage-class.yaml
-  - volume-snapshot-class.yaml
+  # - ceph-block-pool.yaml
+  # - ceph-file-system.yaml
+  # - ceph-object.yaml
+  # - storage-class.yaml
+  # - volume-snapshot-class.yaml
