--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - rbac.yaml
   - helm-release.yaml
-  - secret.sops.yaml
   - storage
   # - rook-direct-mount
   # - service-monitors
