debug: rook troubleshooting

--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -4,7 +4,7 @@ data:
     admin-secret: ENC[AES256_GCM,data:XYTYRKqaxMLJ7aorX1Rf1DBaxekWO926dsQstyIaE5BTKSmXBGPTjAC3Ov3W6SIJvRWMRBup/Zs=,iv:u0Smk08Lqml1hDK3Jl9zV1k5xiA4NJ8SMKXXEjh5P0s=,tag:Ms3XDm0YY0X6LNS0G7Q1AA==,type:str]
     cluster-name: ENC[AES256_GCM,data:OydUs1ffOmQ=,iv:BQac5toU1K5VJhxriuHThCpraOtam9EudsnacL6tA3w=,tag:WqDrFkq27iXn1G+DSvxG4w==,type:str]
     fsid: ENC[AES256_GCM,data:ZFqvjUZj7YElAS9eDxLKjkAh9inzINZqNkwpV281iBXptbXFeiw2peMP9EZTNRgE,iv:CerWdcWlrORW4FjRo6JjCxzqJYirAZaQfqDIvwZQfGM=,tag:jVwlrRxl+biLXhiv8eBpBg==,type:str]
-    mon-secret: ENC[AES256_GCM,data:RJKIJxvPX4FgXTrGdmLmWfeRk2WhGHlwRxgyFPaizaaUGBMcrYa7CAVZJts9fVrblc86W1xD87c=,iv:p+XzaTusyoI4IvqJmVsYQkS9wT5ua9H6ff+LcSOh+X8=,tag:KP5jni+JaBD0zT8LdGXBnw==,type:str]
+    mon-secret: ENC[AES256_GCM,data:myMWcFJ5dTthwRpm,iv:8jJ7Ub//jRoaUmJO0YfpHSkCc6LaaBIm44XXwqq0qw4=,tag:EV7ilCpefsnA/68VQS9kyg==,type:str]
 kind: Secret
 metadata:
     name: rook-ceph-mon
@@ -18,8 +18,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-16T16:40:42Z"
-    mac: ENC[AES256_GCM,data:xCETnATAfWX43xEi46Id9b3/WZ3O3zILHbFJ30kxAuqiCYvX8OgPF+PVnpHJdnU7UI6VrXJ5doZJzO5gHvqeBzeJSPTDzlNtAauHUIno/gSU2HDUSUULb7oap9XB1K06nF1y+dAFaXOzhsU6mj9/ldkFh/kBTmmwwdE6hNKLUTI=,iv:j12xD6K7dc1JFK64ZfH3mbhwKlbq0obCAna/cLqCwgg=,tag:LCGKVvHAvehcXOyDWuNomA==,type:str]
+    lastmodified: "2021-09-20T18:19:07Z"
+    mac: ENC[AES256_GCM,data:nFx9BiIBLVvbxsZnOeBoHr8CuFOBpc15bctbeW69Boqirwjs5rBIOgsy+lL96MegzJsPFfJZAFs1G0JiM9UM/u0N0kYbNrVbNE4a7rqIwrPZejC0OjnB9CfZNyXRdj/22lGBi+DQQxw5wZiAkHsC3ZM5Bn8ehJP11rC+BTYdl6Y=,iv:TOUorj4rTBAGk7CzUwP8G3XcNezz87s3CFFcN2BREjE=,tag:gwvo/mblWTFMZtYDxpJFvQ==,type:str]
     pgp:
         - created_at: "2021-09-16T16:40:41Z"
           enc: |
