--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -4,7 +4,7 @@ data:
     admin-secret: ENC[AES256_GCM,data:XYTYRKqaxMLJ7aorX1Rf1DBaxekWO926dsQstyIaE5BTKSmXBGPTjAC3Ov3W6SIJvRWMRBup/Zs=,iv:u0Smk08Lqml1hDK3Jl9zV1k5xiA4NJ8SMKXXEjh5P0s=,tag:Ms3XDm0YY0X6LNS0G7Q1AA==,type:str]
     cluster-name: ENC[AES256_GCM,data:OydUs1ffOmQ=,iv:BQac5toU1K5VJhxriuHThCpraOtam9EudsnacL6tA3w=,tag:WqDrFkq27iXn1G+DSvxG4w==,type:str]
     fsid: ENC[AES256_GCM,data:ZFqvjUZj7YElAS9eDxLKjkAh9inzINZqNkwpV281iBXptbXFeiw2peMP9EZTNRgE,iv:CerWdcWlrORW4FjRo6JjCxzqJYirAZaQfqDIvwZQfGM=,tag:jVwlrRxl+biLXhiv8eBpBg==,type:str]
-    mon-secret: ENC[AES256_GCM,data:tbVm4Ajo5fL3CE5/q2TIrA==,iv:/T6d/2qJhe4xMsPA+RKhbPyruMpUw4NHsAdmTpBxiX8=,tag:zKq0mfxVcCaNoC008x2Vhw==,type:str]
+    #ENC[AES256_GCM,data:aY3vF/1tqCIcD99qZsfimkoIwO7PrzIqHYlaiRk=,iv:jkBieCKJ5gl9NwWmhuO2cEuK53RlfcwODANm1IPDksI=,tag:rane9M+hvHAC07S7qFN8EA==,type:comment]
 kind: Secret
 metadata:
     name: rook-ceph-mon
@@ -18,8 +18,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T18:19:46Z"
-    mac: ENC[AES256_GCM,data:fgwgIoNoBBXWZfTdrWlGBCykDNpTyczrUzHmbfyj9aLvgjUm1rOWN5RPDFn1r4ZVgUDDNxhwkjy5xOhdfYib2UZvfMW64Gt7AjZMlA6CSYgQi9Dz4+EpIBJy0S6gLnZmA2mEnhkeML0qaCbUMnlVx0XZ7tY+srsFSJSEB7xx83M=,iv:US2v9szK6Qc8cNrP1jqYuHDhT9Hi73vcap6zzKhKETI=,tag:NkiiKnQrJ7rN4pTSGSUlUA==,type:str]
+    lastmodified: "2021-09-20T18:25:55Z"
+    mac: ENC[AES256_GCM,data:F1lf+idjm+t1sgf3EQESjH+jvZ7OiT1Q5MFqlAlCfPIu4VZTXSI7OEo5CTFlEMhVQfggIgqZIx+nofPgJyfREC3+JqFRTO9QxIHeHtHE43aQK5j3HG1p57uUp0b/o3JgyXmbQJLDsSnoiLPmH4FiVA+nN1oHhRhJ2hx+2wFKDVo=,iv:nBIkm6+5w/IBQvheku/QLgOQJuM/fIf8OOY0hrMSbL8=,tag:Kj+HsOiz3Lg4xTdEyuocIw==,type:str]
     pgp:
         - created_at: "2021-09-16T16:40:41Z"
           enc: |
