--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -1,10 +1,10 @@
 # yamllint disable
 apiVersion: v1
-data:
-    admin-secret: ENC[AES256_GCM,data:XYTYRKqaxMLJ7aorX1Rf1DBaxekWO926dsQstyIaE5BTKSmXBGPTjAC3Ov3W6SIJvRWMRBup/Zs=,iv:u0Smk08Lqml1hDK3Jl9zV1k5xiA4NJ8SMKXXEjh5P0s=,tag:Ms3XDm0YY0X6LNS0G7Q1AA==,type:str]
-    cluster-name: ENC[AES256_GCM,data:OydUs1ffOmQ=,iv:BQac5toU1K5VJhxriuHThCpraOtam9EudsnacL6tA3w=,tag:WqDrFkq27iXn1G+DSvxG4w==,type:str]
-    fsid: ENC[AES256_GCM,data:ZFqvjUZj7YElAS9eDxLKjkAh9inzINZqNkwpV281iBXptbXFeiw2peMP9EZTNRgE,iv:CerWdcWlrORW4FjRo6JjCxzqJYirAZaQfqDIvwZQfGM=,tag:jVwlrRxl+biLXhiv8eBpBg==,type:str]
-    #ENC[AES256_GCM,data:aY3vF/1tqCIcD99qZsfimkoIwO7PrzIqHYlaiRk=,iv:jkBieCKJ5gl9NwWmhuO2cEuK53RlfcwODANm1IPDksI=,tag:rane9M+hvHAC07S7qFN8EA==,type:comment]
+stringData:
+    admin-secret: ENC[AES256_GCM,data:HvIgwdm+yQuoEnyAtyZcIGcllJtTWL/NPrNZBL3w5tXPtTl3xZlFyA==,iv:Dvh+/GzqUv2P27SxMzbCcJLMaE+6HTIhiQN8q8BK1fA=,tag:7GWkcMNXc9+hjoqPHkrAxA==,type:str]
+    cluster-name: ENC[AES256_GCM,data:vDwf2Q==,iv:8mLqGrxJOryIwuMPI8rp2QcdhFIkBnW/bpiXX3px39M=,tag:XVAQRjlMW4O9iOPYSeK8zw==,type:str]
+    fsid: ENC[AES256_GCM,data:bzxsMV3Zhvv+1ul1k7NpOIju34RAPTqB05SooRV8X0htpo9I,iv:4i5l58VSUkfk362SZHOiNelgo2x+fcoybGtdPIwTPnQ=,tag:FW1jUuqYqpTEz4zq4RPcLw==,type:str]
+    #ENC[AES256_GCM,data:nsvlRI9/fVGqg0ob8Z/aj+agtfPz+AiOXuXHcKk=,iv:Y21twOSZHJSBR9WQNR9OPUOFE9zPviqvWoJ1A7o2Y38=,tag:pyd1XgHbFUQPvDIeK4LrAQ==,type:comment]
 kind: Secret
 metadata:
     name: rook-ceph-mon
@@ -18,8 +18,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T18:25:55Z"
-    mac: ENC[AES256_GCM,data:F1lf+idjm+t1sgf3EQESjH+jvZ7OiT1Q5MFqlAlCfPIu4VZTXSI7OEo5CTFlEMhVQfggIgqZIx+nofPgJyfREC3+JqFRTO9QxIHeHtHE43aQK5j3HG1p57uUp0b/o3JgyXmbQJLDsSnoiLPmH4FiVA+nN1oHhRhJ2hx+2wFKDVo=,iv:nBIkm6+5w/IBQvheku/QLgOQJuM/fIf8OOY0hrMSbL8=,tag:Kj+HsOiz3Lg4xTdEyuocIw==,type:str]
+    lastmodified: "2021-09-20T18:27:05Z"
+    mac: ENC[AES256_GCM,data:xG1Okzfp6AkqxWgBIooLGaHNqVRqEsG6/UuJbpXgxn2+HuHfJEXRyajZsA8fhKIfIsKhNlqe3lMnI5c4nlFruuAwYNDTar4dGE0tcIy/vOBbezsNnHizl+CZNvQ9gn4Qi7wP1KSM6ZbR4i3eLCP4cs/cL8Ofw9ed4SfH6uPwXUY=,iv:FgbtrOyNlpdUYJNkd5/BxHzd1oFfqdReaMhxgGtCMNY=,tag:NWQJWFqhsI0a1z09xTdfrQ==,type:str]
     pgp:
         - created_at: "2021-09-16T16:40:41Z"
           enc: |
