--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -4,7 +4,7 @@ stringData:
     admin-secret: ENC[AES256_GCM,data:HvIgwdm+yQuoEnyAtyZcIGcllJtTWL/NPrNZBL3w5tXPtTl3xZlFyA==,iv:Dvh+/GzqUv2P27SxMzbCcJLMaE+6HTIhiQN8q8BK1fA=,tag:7GWkcMNXc9+hjoqPHkrAxA==,type:str]
     cluster-name: ENC[AES256_GCM,data:vDwf2Q==,iv:8mLqGrxJOryIwuMPI8rp2QcdhFIkBnW/bpiXX3px39M=,tag:XVAQRjlMW4O9iOPYSeK8zw==,type:str]
     fsid: ENC[AES256_GCM,data:bzxsMV3Zhvv+1ul1k7NpOIju34RAPTqB05SooRV8X0htpo9I,iv:4i5l58VSUkfk362SZHOiNelgo2x+fcoybGtdPIwTPnQ=,tag:FW1jUuqYqpTEz4zq4RPcLw==,type:str]
-    mon-secret: ENC[AES256_GCM,data:9Gh1DfQ4VI1WOb3kpWrOZN8VXRLfv4ahBjZ5EHV8orqf8wRzGMHVPw==,iv:8+pMmYZeriV/Z0FbI68J79WccyjRWX4JJBkVEN5PR9U=,tag:Sb5md2welqCOamXQIxaSOQ==,type:str]
+#   mon-secret: AQAE1AFhC/fVJhAAg4XdSdOZwcV1ru4DUcaDGA==
 kind: Secret
 metadata:
     name: rook-ceph-mon
@@ -18,8 +18,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T18:31:16Z"
-    mac: ENC[AES256_GCM,data:EbRuzRG98kFS4Rpkwtqx36v3JpaT7CJFRDPeVQ9o9WLqUGf9oibvKiyMy0x4aZ7c72ZYtyhUJXQrcRAjlDIcx6ejtNPGHWxs8IJjFMMg4O2dt8HUFVQQH+RNMV/OIKhjtwerqOfrYTAV/pWe+TOeWBzDOfU3hyGvdjM8+BK/TSo=,iv:F/xUNW6fUBCs3Ac6lAFQgnVCPECOqsbAdu2Qr9DmKsU=,tag:+PIxf5VXWgenwEC1Pco1hw==,type:str]
+    lastmodified: "2021-09-20T18:41:25Z"
+    mac: ENC[AES256_GCM,data:BYZaaxkAg3N3Sjtjv9lrtN6Wxv/e95Xt+6d3LSp7B10xmnDkJNNDZ6kQ4LtxDgD/1TJKST0DH+gmShUhQEAAL99riz17sHd/SvLVNRYzzIcTiZUH8rSu+iaD8gCTeMIHnD+H33hG4BAB/1Kdo5Igt3Fy4dliwVIRYh6+tnaRFzQ=,iv:IH3FzRX1ZN6/6b83+cIozXTmNNrrbW3wtQuuamnek8g=,tag:oJqs/cTqodfgpRyDbW82Xg==,type:str]
     pgp:
         - created_at: "2021-09-16T16:40:41Z"
           enc: |
